--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        " 'ham': {'END': '15.385%'}}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,6 +394,7 @@
     "        # each key in count is unique so we don't need to check if they're already in the dictionary\n",
     "        # the formula here is a comprehension\n",
     "        # key = (count(first layer key, second layer key)/count(sum of occurences starting in first layer key))\n",
+    "        #smooth by adding 1 to the numerator and the count of all unique vocabulary to the denominator\n",
     "        prob_s[keys1] = {key: \"{:.3%}\".format((count[keys1][key] + 1)/(sum([num for num in count[keys1].values()]) + vocab_count)) for key in values}\n",
     "\n",
     "prob_s"
@@ -437,7 +438,7 @@
     "\n",
     "Doc2: Doc5 and Doc6 both have one key in common with Doc2 so they're it's nearest neighbors.\n",
     "\n",
-    "Doc3: Doc1, Doc2, Doc4, Doc5, and Doc6 each had one key in common with Doc3 so they're it's nearest neighbors."
+    "Doc3: Doc1, Doc4, and Doc5 each had one key in common with Doc3 so they're it's nearest neighbors."
    ]
   },
   {
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +577,7 @@
        " [0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0]]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +585,12 @@
    "source": [
     "# space for your code here\n",
     "\n",
-    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], 2: [\"opera\", \"training\", \"opera\", \"training\"], 3: [\"soccer\", \"tech\", \"AI\", \"robots\"], 4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], 5: [\"AI\", \"exhibition\", \"college\", \"opera\"], 6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
+    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], \n",
+    "            2: [\"opera\", \"training\", \"opera\", \"training\"], \n",
+    "            3: [\"soccer\", \"tech\", \"AI\", \"robots\"], \n",
+    "            4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], \n",
+    "            5: [\"AI\", \"exhibition\", \"college\", \"opera\"], \n",
+    "            6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
     "\n",
     "docs = []\n",
     "\n",
@@ -622,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -630,28 +636,22 @@
      "output_type": "stream",
      "text": [
       "For Doc 1 Nearest datapoint is Doc no. 1 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0 \n",
       "\n",
       "For Doc 2 Nearest datapoint is Doc no. 2 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 5 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 5 at distance 4.0 \n",
       "\n",
       "For Doc 3 Nearest datapoint is Doc no. 3 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 6.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 6.0 \n",
       "\n",
       "For Doc 4 Nearest datapoint is Doc no. 4 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0 \n",
       "\n",
       "For Doc 5 Nearest datapoint is Doc no. 5 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 2 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 2 at distance 4.0 \n",
       "\n",
       "For Doc 6 Nearest datapoint is Doc no. 6 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0 \n",
       "\n"
      ]
     }
@@ -669,8 +669,7 @@
     "    distances, neighbors = neighbor_obj.kneighbors(data)\n",
     "\n",
     "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
-    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
-    "    print(\"\\n\")\n"
+    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1], \"\\n\")\n"
    ]
   },
   {
@@ -682,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -690,28 +689,22 @@
      "output_type": "stream",
      "text": [
       "For Doc 1 Nearest datapoint is Doc no. 1 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0 \n",
       "\n",
       "For Doc 2 Nearest datapoint is Doc no. 2 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 5 at distance 6.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 5 at distance 6.0 \n",
       "\n",
       "For Doc 3 Nearest datapoint is Doc no. 3 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 6.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 6.0 \n",
       "\n",
       "For Doc 4 Nearest datapoint is Doc no. 4 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0 \n",
       "\n",
       "For Doc 5 Nearest datapoint is Doc no. 5 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0 \n",
       "\n",
       "For Doc 6 Nearest datapoint is Doc no. 6 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 1 at distance 4.0\n",
-      "\n",
+      "Second nearest datapoint is Doc no. 1 at distance 4.0 \n",
       "\n"
      ]
     }
@@ -719,7 +712,12 @@
    "source": [
     "# space for your code here\n",
     "\n",
-    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], 2: [\"opera\", \"training\", \"opera\", \"training\"], 3: [\"soccer\", \"tech\", \"AI\", \"robots\"], 4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], 5: [\"AI\", \"exhibition\", \"college\", \"opera\"], 6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
+    "doc_dict = {1: [\"baseball\", \"startups\", \"college\", \"soccer\"], \n",
+    "            2: [\"opera\", \"training\", \"opera\", \"training\"], \n",
+    "            3: [\"soccer\", \"tech\", \"AI\", \"robots\"], \n",
+    "            4: [\"sculpture\", \"college\", \"AI\", \"baseball\"], \n",
+    "            5: [\"AI\", \"exhibition\", \"college\", \"opera\"], \n",
+    "            6: [\"startups\", \"training\", \"sculpture\", \"college\"]}\n",
     "\n",
     "docs = []\n",
     "\n",
@@ -758,8 +756,7 @@
     "    distances, neighbors = neighbor_obj.kneighbors(data)\n",
     "\n",
     "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
-    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
-    "    print(\"\\n\")"
+    "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1], \"\\n\")"
    ]
   }
  ],
