--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "3 is C\n",
     "\n",
-    "* 3 is similar to 1 but it qualifies the statement with \"the first complete sentence you hear ***starts*** with...\" meaning that this sentence will need a START identifier but not necessarily an END identifier, which would match C."
+    "* 3 is similar to 1 but it qualifies the statement with \"the first complete sentence you hear ***starts*** with...\" meaning that this sentence will need a START identifier but not necessarily an END identifier, which would match C. b"
    ]
   },
   {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,27 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'START': {'I': '67%', 'Sam': '33%'},\n",
-       " 'I': {'am': '67%', 'do': '33%'},\n",
-       " 'am': {'Sam': '50%', 'END': '50%'},\n",
-       " 'Sam': {'END': '50%', 'I': '50%'},\n",
-       " 'END': {'START': '100%'},\n",
-       " 'do': {'not': '100%'},\n",
-       " 'not': {'like': '100%'},\n",
-       " 'like': {'green': '100%'},\n",
-       " 'green': {'eggs': '100%'},\n",
-       " 'eggs': {'and': '100%'},\n",
-       " 'and': {'ham': '100%'},\n",
-       " 'ham': {'END': '100%'}}"
+       "{'START': {'I': '66.67%', 'Sam': '33.33%'},\n",
+       " 'I': {'am': '66.67%', 'do': '33.33%'},\n",
+       " 'am': {'Sam': '50.00%', 'END': '50.00%'},\n",
+       " 'Sam': {'END': '50.00%', 'I': '50.00%'},\n",
+       " 'END': {'START': '100.00%'},\n",
+       " 'do': {'not': '100.00%'},\n",
+       " 'not': {'like': '100.00%'},\n",
+       " 'like': {'green': '100.00%'},\n",
+       " 'green': {'eggs': '100.00%'},\n",
+       " 'eggs': {'and': '100.00%'},\n",
+       " 'and': {'ham': '100.00%'},\n",
+       " 'ham': {'END': '100.00%'}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
     "        # each key in count is unique so we don't need to check if they're already in the dictionary\n",
     "        # the formula here is a comprehension\n",
     "        # key = (count(first layer key, second layer key)/count(sum of occurences starting in first layer key))\n",
-    "        prob_dict[keys1] = {key: (\"{:.0%}\".format((count[keys1][key]/sum([num for num in count[keys1].values()])))) for key in values}\n",
+    "        prob_dict[keys1] = {key: (\"{:.2%}\".format((count[keys1][key]/sum([num for num in count[keys1].values()])))) for key in values}\n",
     "\n",
     "prob_dict"
    ]
@@ -348,27 +348,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'START': {'I': '20.000%', 'Sam': '13.333%'},\n",
-       " 'I': {'am': '20.000%', 'do': '13.333%'},\n",
-       " 'am': {'Sam': '14.286%', 'END': '14.286%'},\n",
-       " 'Sam': {'END': '14.286%', 'I': '14.286%'},\n",
-       " 'END': {'START': '21.429%'},\n",
-       " 'do': {'not': '15.385%'},\n",
-       " 'not': {'like': '15.385%'},\n",
-       " 'like': {'green': '15.385%'},\n",
-       " 'green': {'eggs': '15.385%'},\n",
-       " 'eggs': {'and': '15.385%'},\n",
-       " 'and': {'ham': '15.385%'},\n",
-       " 'ham': {'END': '15.385%'}}"
+       "{'START': {'I': '20.00%', 'Sam': '13.33%'},\n",
+       " 'I': {'am': '20.00%', 'do': '13.33%'},\n",
+       " 'am': {'Sam': '14.29%', 'END': '14.29%'},\n",
+       " 'Sam': {'END': '14.29%', 'I': '14.29%'},\n",
+       " 'END': {'START': '21.43%'},\n",
+       " 'do': {'not': '15.38%'},\n",
+       " 'not': {'like': '15.38%'},\n",
+       " 'like': {'green': '15.38%'},\n",
+       " 'green': {'eggs': '15.38%'},\n",
+       " 'eggs': {'and': '15.38%'},\n",
+       " 'and': {'ham': '15.38%'},\n",
+       " 'ham': {'END': '15.38%'}}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
     "        # each key in count is unique so we don't need to check if they're already in the dictionary\n",
     "        # the formula here is a comprehension\n",
     "        # key = (count(first layer key, second layer key)/count(sum of occurences starting in first layer key))\n",
-    "        prob_s[keys1] = {key: \"{:.3%}\".format((count[keys1][key] + 1)/(sum([num for num in count[keys1].values()]) + vocab_count)) for key in values}\n",
+    "        prob_s[keys1] = {key: \"{:.2%}\".format((count[keys1][key] + 1)/(sum([num for num in count[keys1].values()]) + vocab_count)) for key in values}\n",
     "\n",
     "prob_s"
    ]
@@ -453,16 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>NearestNeighbors(metric=&#x27;cityblock&#x27;, n_neighbors=2)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">NearestNeighbors</label><div class=\"sk-toggleable__content\"><pre>NearestNeighbors(metric=&#x27;cityblock&#x27;, n_neighbors=2)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
        "NearestNeighbors(metric='cityblock', n_neighbors=2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +579,7 @@
        " [0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0]]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +637,7 @@
       "\n",
       "\n",
       "For Doc 2 Nearest datapoint is Doc no. 2 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 5 at distance 4.0\n",
+      "Second nearest datapoint is Doc no. 5 at distance 6.0\n",
       "\n",
       "\n",
       "For Doc 3 Nearest datapoint is Doc no. 3 at distance 0.0 (which is that same datapoint)\n",
@@ -646,7 +649,7 @@
       "\n",
       "\n",
       "For Doc 5 Nearest datapoint is Doc no. 5 at distance 0.0 (which is that same datapoint)\n",
-      "Second nearest datapoint is Doc no. 2 at distance 4.0\n",
+      "Second nearest datapoint is Doc no. 4 at distance 4.0\n",
       "\n",
       "\n",
       "For Doc 6 Nearest datapoint is Doc no. 6 at distance 0.0 (which is that same datapoint)\n",
@@ -682,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -753,9 +756,9 @@
     "neighbor_obj = NearestNeighbors(n_neighbors=2, metric='cityblock')\n",
     "neighbor_obj.fit(data)\n",
     "\n",
+    "distances, neighbors = neighbor_obj.kneighbors( data)\n",
+    "\n",
     "for i in range(len(docs)):\n",
-    "    \n",
-    "    distances, neighbors = neighbor_obj.kneighbors(data)\n",
     "\n",
     "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
     "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
