--- a/Homework/Introcl_homework_3 _espie.ipynb
+++ b/Homework/Introcl_homework_3 _espie.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "*(click here to insert for your text answer here)*\n",
     "\n",
-    "# *CHECK*\n",
+    "# Question: Is this the right format?\n",
     "\n",
     "$P(START\\:My\\:iguana\\:is\\:on\\:fire\\:END) \\approx P(my | START ,\\_) \\cdot P(iguana|my ,START) \\cdot P(is| iguana, my) \\cdot P(on |is ,iguana) \\cdot P(fire| on, is) \\cdot P(END | fire, on)$"
    ]
@@ -763,6 +763,15 @@
     "    print(\"For Doc {} Nearest datapoint is Doc no.\".format(i + 1), (neighbors[i][0] + 1), \"at distance\", distances[i][0], \"(which is that same datapoint)\")\n",
     "    print(\"Second nearest datapoint is Doc no.\", (neighbors[i][1] + 1), \"at distance\", distances[i][1])\n",
     "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question: what is the output of kneighbors?\n",
+    "\n",
+    "# Question: Naive Bayes: batching the data, how small can the batches be?"
    ]
   }
  ],
