--- a/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
+++ b/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Making a Naive Bayes classifier in Python\n",
+    "\n",
     "We start with a toy example of how to do machine learning with scikit-learn, adapted from the scikit-learn tutorial."
    ]
   },
@@ -28,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "MultinomialNB()"
       ]
      },
      "execution_count": 2,
@@ -42,7 +44,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "# When we make a NaiveBayes classifier without changing any \n",
     "# of the default parameter values, it does\n",
-    "# add-one smoothing, that's what \"allpha = 1.0\" means.\n",
+    "# add-one smoothing, that's what \"alpha = 1.0\" means.\n",
     "# class_prior = None means that we're not setting P(c)\n",
     "# for the outcome classes c ahead of seeing the data,\n",
     "# and fit_prior=True means that we're compuring P(c)\n",
@@ -181,7 +183,7 @@
    "source": [
     "# Here is a list of all the words that the feature extractor \n",
     "# has seen:\n",
-    "print(\", \".join(counting_feature_extractor.get_feature_names()))"
+    "print(\", \".join(counting_feature_extractor.get_feature_names_out()))"
    ]
   },
   {
@@ -219,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "MultinomialNB()"
       ]
      },
      "execution_count": 9,
@@ -312,6 +314,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Inspecting what the model has learned\n",
+    "\n",
+    "Naive Bayes classifiers are quite interpretable: We can look at the class probabilities to see which classes are overall most likely:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class no. 0 is neg with prob. 0.6000000000000001\n",
+      "class no. 1 is pos with prob. 0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# asking the model for log probabilities\n",
+    "class_logprobs = nb_jm.class_log_prior_\n",
+    "# turning them back into probabilities\n",
+    "class_probs = list(np.exp(class_logprobs))\n",
+    "# making a list of class names\n",
+    "classes = [\"neg\", \"pos\"]\n",
+    "\n",
+    "for classno in range(2):\n",
+    "    print(\"class no.\", classno, \"is\", classes[classno], \"with prob.\", class_probs[classno])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we can look at the feature probabilities to see which features the model found to be most indicative of each class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "class neg\n",
+      "\t and : 0.0882\n",
+      "\t very : 0.0588\n",
+      "\t surprises : 0.0588\n",
+      "\t predictable : 0.0588\n",
+      "\t plain : 0.0588\n",
+      "\t no : 0.0588\n",
+      "\t laughs : 0.0588\n",
+      "\t lacks : 0.0588\n",
+      "\t just : 0.0588\n",
+      "\t few : 0.0588\n",
+      "\t entirely : 0.0588\n",
+      "\t energy : 0.0588\n",
+      "\t boring : 0.0588\n",
+      "\t the : 0.0294\n",
+      "\t summer : 0.0294\n",
+      "\t powerful : 0.0294\n",
+      "\t of : 0.0294\n",
+      "\t most : 0.0294\n",
+      "\t fun : 0.0294\n",
+      "\t film : 0.0294\n",
+      "\n",
+      "class pos\n",
+      "\t the : 0.1034\n",
+      "\t very : 0.069\n",
+      "\t summer : 0.069\n",
+      "\t powerful : 0.069\n",
+      "\t of : 0.069\n",
+      "\t most : 0.069\n",
+      "\t fun : 0.069\n",
+      "\t film : 0.069\n",
+      "\t surprises : 0.0345\n",
+      "\t predictable : 0.0345\n",
+      "\t plain : 0.0345\n",
+      "\t no : 0.0345\n",
+      "\t laughs : 0.0345\n",
+      "\t lacks : 0.0345\n",
+      "\t just : 0.0345\n",
+      "\t few : 0.0345\n",
+      "\t entirely : 0.0345\n",
+      "\t energy : 0.0345\n",
+      "\t boring : 0.0345\n",
+      "\t and : 0.0345\n"
+     ]
+    }
+   ],
+   "source": [
+    "# asking the model for log probabilities\n",
+    "feature_logprobs = nb_jm.feature_log_prob_\n",
+    "# turning them back into probabilities\n",
+    "feature_probs = np.exp(feature_logprobs)\n",
+    "# getting a list of all word types from the feature extractor\n",
+    "features = counting_feature_extractor.get_feature_names_out()\n",
+    "\n",
+    "for classno in range(2):\n",
+    "    print(\"\\nclass\", classes[classno])\n",
+    "    \n",
+    "    # extracting row no. [classno]\n",
+    "    thisclass_feature_probs = list(feature_probs[classno])\n",
+    "    # combining each feature with its probability into a tuple,\n",
+    "    # probability first\n",
+    "    features_and_probs = list(zip(thisclass_feature_probs, features))\n",
+    "    # and sorting those tuples by probability, highest first\n",
+    "    features_and_probs.sort(reverse = True)\n",
+    "    \n",
+    "    for feature_prob, feature in features_and_probs:\n",
+    "        print(\"\\t\", feature, \":\", round(feature_prob, 4))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, it's the function words that have some of the highest probabilities -- because they simply occur a lot. So removing stop words is not a bad idea."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other feature extractors\n",
+    "\n",
     "scikit-learn has many other feature extractors. There is also one that assumes that each data point is given as a Python dictionary of the form\n",
     "\n",
     "```{feature1:value1, feature2:value2, ...}```\n",
@@ -323,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +472,7 @@
        " FreqDist({'the': 2, 'most': 1, 'fun': 1, 'film': 1, 'of': 1, 'summer': 1})]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +522,7 @@
        "        1., 0., 2., 0.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "MultinomialNB()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +564,7 @@
        "[FreqDist({'predictable': 1, 'with': 1, 'no': 1, 'fun': 1})]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +601,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +644,7 @@
        " FreqDist({'fun': 1, 'film': 1, 'summer': 1})]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -550,9 +686,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
