--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "## Due: Wednesday October 12, 3pm right before class\n",
     "\n",
-    "## Your name:\n",
-    "## Your EID:\n",
+    "## Your name: Eloragh Espie\n",
+    "## Your EID: eae2273\n",
     "\n",
     "This homework comes with the following files:\n",
     "\n",
@@ -357,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +371,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+   }
   }
  },
  "nbformat": 4,
