--- a/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
+++ b/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
@@ -183,7 +183,9 @@
    "source": [
     "# Here is a list of all the words that the feature extractor \n",
     "# has seen:\n",
-    "print(\", \".join(counting_feature_extractor.get_feature_names_out()))"
+    "print(\", \".join(counting_feature_extractor.get_feature_names()))\n",
+    "#Note: if this stops working, probably due to sci-kit learn update to 1.2 from 1.1.2, not that get_feature_names is deprecated\n",
+    "#and we need to start using get_feature_names_out"
    ]
   },
   {
@@ -198,7 +200,8 @@
        "       [1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
        "       [1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 2, 0]])"
+       "       [0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 2, 0]],\n",
+       "      dtype=int64)"
       ]
      },
      "execution_count": 8,
@@ -276,7 +279,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0]])"
+       "array([[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0]],\n",
+       "      dtype=int64)"
       ]
      },
      "execution_count": 11,
@@ -357,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +421,10 @@
     "# turning them back into probabilities\n",
     "feature_probs = np.exp(feature_logprobs)\n",
     "# getting a list of all word types from the feature extractor\n",
-    "features = counting_feature_extractor.get_feature_names_out()\n",
+    "features = counting_feature_extractor.get_feature_names()\n",
+    "\n",
+    "#Note: if this stops working, probably due to sci-kit learn update to 1.2 from 1.1.2, not that get_feature_names is deprecated\n",
+    "#and we need to start using get_feature_names_out\n",
     "\n",
     "for classno in range(2):\n",
     "    print(\"\\nclass\", classes[classno])\n",
@@ -481,6 +488,7 @@
     "import nltk\n",
     "\n",
     "jm_corpus_countdict = [ ]\n",
+    "\n",
     "for document in jm_corpus:\n",
     "    doc_preprocessed = nltk.word_tokenize(document)\n",
     "    doc_countdict = nltk.FreqDist(doc_preprocessed)\n",
@@ -661,18 +669,11 @@
     "    \n",
     "sw_jm_corpus_countdict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +687,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+   }
   }
  },
  "nbformat": 4,
