Update Making a Naive Bayes classifier in Python with scikit-learn .ipynb

--- a/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
+++ b/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
@@ -49,7 +49,7 @@
     "# for the outcome classes c ahead of seeing the data,\n",
     "# and fit_prior=True means that we're compuring P(c)\n",
     "# from the training data\n",
-    "nb = MultinomialNB()\n",
+    "nb = MultinomialNB(alpha = 1.0)\n",
     "nb.fit(X, y)"
    ]
   },
@@ -668,6 +668,83 @@
     "    sw_jm_corpus_countdict.append(nltk.FreqDist(doc_preprocessed))\n",
     "    \n",
     "sw_jm_corpus_countdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jmX3 = dict_feature_extractor.fit_transform(sw_jm_corpus_countdict)\n",
+    "\n",
+    "jmY3 = [0, 0, 1, 1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_jm3 = MultinomialNB()\n",
+    "nb_jm3.fit(jmX3, jmY3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jm_test_corpus3 = [ 'predictable with no fun']\n",
+    "\n",
+    "jm_test3 = counting_feature_extractor.transform(jm_test_corpus3)\n",
+    "\n",
+    "jm_test3.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_jm.predict(jm_test3)"
    ]
   }
  ],
