Update Making a Naive Bayes classifier in Python with scikit-learn .ipynb

--- a/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
+++ b/In-Class Jupyter Notebooks/Making a Naive Bayes classifier in Python with scikit-learn .ipynb
@@ -746,6 +746,15 @@
    "source": [
     "nb_jm.predict(jm_test3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DONE"
+   ]
   }
  ],
  "metadata": {
