--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -76,41 +76,43 @@
     "\n",
     "*(a) But questions with which committee members taunted bankers appearing as witnesses **left** little doubt that they will recommend passage of it .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 6\n",
     "\n",
     "*(b) The departure of the Giants and the Dodgers to California **left** New York with only the Yankees .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 11\n",
     "\n",
     "*(c) After the coach listed all the boy ’s faults , Hartweger said , “ Coach before I **leave** here , you ’ll get to like me ” .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 5\n",
     "\n",
     "*(d) R. H. S. Crossman , M.P. , writing in The Manchester Guardian , states that departures from West Berlin are now running at the rate not of 700 , but of 1700 a week , and applications to **leave** have risen to 1900 a week .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 8\n",
     "\n",
     "*(e) The house has been swept so clean that contemporary man has been **left** with no means , or at best with wholly inadequate means , for dealing with his experience of spirit .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 6\n",
     "\n",
     "*(f) A second and also good practice is to shear off the tops , **leaving** an inch high stub with just a leaf or two on each branch .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 11\n",
     "\n",
     "*(g) No doubt some experiences vanish so completely as to **leave** no trace on the sleeper ’s mind .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 11\n",
     "\n",
     "*(h) He is a widower , his three children are dead , he has no one **left** on earth ; also he is a drunk , and has lost his job on that account .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 12\n",
     "\n",
     "*(i) Piepsam tries to stop him by force , receives a push in the chest from “ Life ” , and is **left** standing in impotent and growing rage , while a crowd begins to gather .*\n",
     "\n",
-    "Sense:\n",
+    "Sense: 3\n",
     "\n",
-    "*(j) The audience **leaves** the play under a spell , It is the kind of spell which the exposure to spirit in its living active manifestation always evokes .*\n"
+    "*(j) The audience **leaves** the play under a spell , It is the kind of spell which the exposure to spirit in its living active manifestation always evokes .*\n",
+    "\n",
+    "Sense: 5"
    ]
   },
   {
@@ -128,7 +130,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "I marked 2 sentences as sense 11 and all of those were pretty difficult to to annotate. I felt like each had a different meaning, but ultimately sense 11 was the only one that seemed to fit them.\n",
+    "\n",
+    "Sense 1, 5, and 8 all had very similar meanings related to leaving or exiting a physical place or situation. For sense 1, I differentiated it by the impacted the example sentences seemed to have relative to 5 or 8. \n",
+    "\n",
+    "Sense 1 sentences seemed more like passing thoughts and they were all relative to time rather than place - **\"The ship leaves at midnight\"**. \n",
+    "\n",
+    "I thought that sense 5 and sense 1 were almost identical at first, but I realized that sense 5 sentences were relative to a exiting from a space rather than at a time - **\"the fugitive has left the country\"**. \n",
+    "\n",
+    "For sense 8, I believe it has two distinguishing features from 1 and 5 - it can be relative to a space, time, or situation simultaneously and it can express some kind of desire. For example:\n",
+    "\n",
+    "- **\"He left the Senate after two terms\"** \n",
+    "\n",
+    "    He is leaving at specific time, after a specific time, or after a specific period of time and he is leaving a specific situation.\n",
+    "- **\"She wants to leave\"**\n",
+    "\n",
+    "    A desire to exit a place or situation is expressable through this sense.\n",
+    "\n",
+    "Sentence d is the only sentence I marked as 8. I did this because the applications to leave are specific to a place - West Berlin -, an amount or specific time - a week - , and the increase in applications expresses a broader desire to move."
    ]
   },
   {
@@ -155,7 +176,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "# CHECK\n",
+    "\n",
+    "$P(THINK) = \\frac{count(THINK)}{count(THINK) + count(EXPERIENCE)}$\n",
+    "\n",
+    "$P(THINK) = \\frac{12}{12 + 15}$\n",
+    "\n",
+    "$P(THINK) = \\frac{4}{9}$\n",
+    "\n",
+    "$P(EXPERIENCE) = \\frac{count(EXPERIENCE)}{count(THINK) + count(EXPERIENCE)}$\n",
+    "\n",
+    "$P(EXPERIENCE) = \\frac{15}{12 + 15}$\n",
+    "\n",
+    "$P(EXPERIENCE) = \\frac{5}{9}$\n"
    ]
   },
   {
@@ -178,7 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "# CLARIFY"
    ]
   },
   {
@@ -206,7 +243,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*space for your text answer here*"
+    "*space for your text answer here*\n",
+    "\n",
+    "# CLARIFY"
    ]
   },
   {
@@ -289,11 +328,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experience: 55.556%\n",
+      "Think: 44.444%\n"
+     ]
+    }
+   ],
    "source": [
-    "# please place your code here"
+    "# please place your code here\n",
+    "\n",
+    "# check if this is the same\n",
+    "# if you did problem 2 right, this is right - vice versa\n",
+    "\n",
+    "sum = len(feel_training_labels)\n",
+    "\n",
+    "p_think = \"{:.3%}\".format(len([label for label in feel_training_labels if label == \"THINK\"])/sum)\n",
+    "\n",
+    "p_exp = \"{:.3%}\".format(len([label for label in feel_training_labels if label == \"EXPERIENCE\"])/sum)\n",
+    "\n",
+    "print(f\"Experience: {p_exp}\\nThink: {p_think}\")"
    ]
   },
   {
@@ -357,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -371,11 +430,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
