--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "I marked 2 sentences as sense 11 and all of those were pretty difficult to to annotate. I felt like each had a different meaning, but ultimately sense 11 was the only one that seemed to fit them.\n",
+    "I marked 2 sentences as sense 11 and all of those were pretty difficult to to annotate. I felt like each had a different meaning, but ultimately sense 11 was the only one that seemed to fit them both.\n",
     "\n",
     "Sense 1, 5, and 8 all had very similar meanings related to leaving or exiting a physical place or situation. For sense 1, I differentiated it by the impacted the example sentences seemed to have relative to 5 or 8. \n",
     "\n",
@@ -149,7 +149,7 @@
     "\n",
     "    A desire to exit a place or situation is expressable through this sense.\n",
     "\n",
-    "Sentence d is the only sentence I marked as 8. I did this because the applications to leave are specific to a place - West Berlin -, an amount or specific time - a week - , and the increase in applications expresses a broader desire to move."
+    "Sentence d is the only sentence I marked as 8. I did this because the applications to leave are specific to a place - West Berlin - and the increase in applications expresses a broader desire to move."
    ]
   },
   {
@@ -215,7 +215,49 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# CLARIFY"
+    "# CLARIFY\n",
+    "## What does \"compute how long the document is overall\" mean? Total sentences, total words?\n",
+    "\n",
+    "# ***THINK***\n",
+    "\n",
+    "$P(I|THINK) = \\frac{count_{THINK}(I)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(that|THINK) = \\frac{count_{THINK}(that)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(there|THINK) = \\frac{count_{THINK}(there)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(was|THINK) = \\frac{count_{THINK}(was)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(a|THINK) = \\frac{count_{THINK}(a)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(pain|THINK) = \\frac{count_{THINK}(pain)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(in|THINK) = \\frac{count_{THINK}(in)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(my|THINK) = \\frac{count_{THINK}(my)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "$P(leg|THINK) = \\frac{count_{THINK}(leg)}{count_{THINK}(\\_)}$ =\n",
+    "\n",
+    "\n",
+    "# ***EXPERIENCE***\n",
+    "\n",
+    "$P(I|EXPERIENCE) = \\frac{count_{EXPERIENCE}(I)}{count_{EXPERIENCE}(\\_)} = \\frac{9}{457}$ -- # Check this one and then do the rest\n",
+    "\n",
+    "$P(that|EXPERIENCE) = \\frac{count_{EXPERIENCE}(that)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(there|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(was|EXPERIENCE) = \\frac{count_{EXPERIENCE}(there)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(a|EXPERIENCE) = \\frac{count_{EXPERIENCE}(a)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(pain|EXPERIENCE) = \\frac{count_{EXPERIENCE}(pain)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(in|EXPERIENCE) = \\frac{count_{EXPERIENCE}(in)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(my|EXPERIENCE) = \\frac{count_{EXPERIENCE}(my)}{count_{EXPERIENCE}(\\_)}$ =\n",
+    "\n",
+    "$P(leg|EXPERIENCE) = \\frac{count_{EXPERIENCE}(leg)}{count_{EXPERIENCE}(\\_)}$ ="
    ]
   },
   {
@@ -234,7 +276,7 @@
     "\n",
     "You will need to re-use your probabilities $P(THINK)$ and $P(EXPERIENCE)$ from problem 2, and the feature probabilities from problem 3.\n",
     "\n",
-    "You will need to compute this value $P(c) \\prod_f P(f|c)$ both for $c=$THINK, and $c=$EXPERIENCE. The two values will not sum up to one -- remember that we dropped a denominator somewhere on the way. \n",
+    "You will need to compute this value $P(c) \\prod_f P(f|c)$ both for $c=THINK$, and $c=EXPERIENCE$. The two values will not sum up to one -- remember that we dropped a denominator somewhere on the way. \n",
     "\n",
     "**For this problem, please do the calculations by hand, and show your work.**"
    ]
@@ -245,7 +287,15 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# CLARIFY"
+    "# CLARIFY\n",
+    "\n",
+    "# ***THINK***\n",
+    "\n",
+    "$P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|THINK) = P(I|THINK) \\cdot P(felt|THINK) \\cdot P(that|THINK) \\cdot P(there|THINK) \\cdot P(was|THINK) \\cdot P(a|THINK) \\cdot P(pain|THINK) \\cdot P(in|THINK) \\cdot P(my|THINK) \\cdot P(leg|THINK)$\n",
+    "\n",
+    "# ***EXPERIENCE***\n",
+    "\n",
+    "$P(c) \\prod_f P(I\\:felt\\:that\\:there\\:was\\:a\\:pain\\:in\\:my\\:leg|EXPERIENCE) = P(I|EXPERIENCE) \\cdot P(felt|EXPERIENCE) \\cdot P(that|EXPERIENCE) \\cdot P(there|EXPERIENCE) \\cdot P(was|EXPERIENCE) \\cdot P(a|EXPERIENCE) \\cdot P(pain|EXPERIENCE) \\cdot P(in|EXPERIENCE) \\cdot P(my|EXPERIENCE) \\cdot P(leg|EXPERIENCE)$"
    ]
   },
   {
@@ -328,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +396,8 @@
     "# check if this is the same\n",
     "# if you did problem 2 right, this is right - vice versa\n",
     "\n",
+    "\n",
+    "#check this, should the sum be total words or total sentences in the corpus?\n",
     "sum = len(feel_training_labels)\n",
     "\n",
     "p_think = \"{:.3%}\".format(len([label for label in feel_training_labels if label == \"THINK\"])/sum)\n",
@@ -368,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,11 +438,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# space for your code here"
+    "# space for your code here\n",
+    "\n",
+    "#get the total word counts for each class\n",
+    "\n",
+    "sum_dict = {\"EXP\": 0 , \"THINK\": 0}\n",
+    "\n",
+    "for i in range(len(feel_training_data)):\n",
+    "    if feel_training_labels[i] == \"EXPERIENCE\":\n",
+    "        sum_dict[\"EXP\"] += len(feel_training_data[i])\n",
+    "    else:\n",
+    "        sum_dict[\"THINK\"] += len(feel_training_data[i])\n"
    ]
   },
   {
@@ -406,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -430,11 +492,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
