--- a/Homework/Introcl_homework_3.ipynb
+++ b/Homework/Introcl_homework_3.ipynb
@@ -762,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -776,11 +776,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1c490f81440cd97bfeee60915f4989b9d097711056e0f4f25d0cf94e2d493cda"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
