--- a/Homework/Introcl_homework_4.ipynb
+++ b/Homework/Introcl_homework_4.ipynb
@@ -438,13 +438,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I: \n",
+      " Experience Probability 1.969%\n",
+      " Think Probability: 1.147%\n",
+      "that: \n",
+      " Experience Probability 0.438%\n",
+      " Think Probability: 1.338%\n",
+      "there: \n",
+      " Experience Probability 0.219%\n",
+      " Think Probability: 0.191%\n",
+      "was: \n",
+      " Experience Probability 0.219%\n",
+      " Think Probability: 0.382%\n",
+      "a: \n",
+      " Experience Probability 1.094%\n",
+      " Think Probability: 0.191%\n",
+      "pain: \n",
+      " Experience Probability 0.875%\n",
+      " Think Probability: 0.191%\n",
+      "in: \n",
+      " Experience Probability 0.219%\n",
+      " Think Probability: 0.191%\n",
+      "my: \n",
+      " Experience Probability 0.875%\n",
+      " Think Probability: 0.191%\n",
+      "leg: \n",
+      " Experience Probability 0.219%\n",
+      " Think Probability: 0.191%\n"
+     ]
+    }
+   ],
    "source": [
     "# space for your code here\n",
     "\n",
-    "#get the total word counts for each class\n",
+    "# get the total word counts for each class\n",
     "\n",
     "sum_dict = {\"EXP\": 0 , \"THINK\": 0}\n",
     "\n",
@@ -452,7 +486,49 @@
     "    if feel_training_labels[i] == \"EXPERIENCE\":\n",
     "        sum_dict[\"EXP\"] += len(feel_training_data[i])\n",
     "    else:\n",
-    "        sum_dict[\"THINK\"] += len(feel_training_data[i])\n"
+    "        sum_dict[\"THINK\"] += len(feel_training_data[i])\n",
+    "\n",
+    "# created a nested dictionary with one entry for experience and one for think\n",
+    "\n",
+    "words_dict = {\"EXP\": {}, \"THINK\": {}}\n",
+    "\n",
+    "# loop through each sentence and each word in the sentence\n",
+    "# keep the first loop as a range to be able to cross reference labels\n",
+    "\n",
+    "for i in range(len(feel_training_data)):\n",
+    "    for word in feel_training_data[i].split(\" \"):\n",
+    "        \n",
+    "        # check what they are assigned to\n",
+    "        if feel_training_labels[i] == \"EXPERIENCE\":\n",
+    "            \n",
+    "            if word not in words_dict[\"EXP\"]:\n",
+    "                # add a new word to the dict or increase the count\n",
+    "                words_dict[\"EXP\"][word] = 1\n",
+    "            else:\n",
+    "                words_dict[\"EXP\"][word] += 1\n",
+    "                \n",
+    "        if feel_training_labels[i] == \"THINK\":\n",
+    "\n",
+    "            if word not in words_dict[\"THINK\"]:\n",
+    "                words_dict[\"THINK\"][word] = 1\n",
+    "            else:\n",
+    "                words_dict[\"THINK\"][word] += 1\n",
+    "\n",
+    "# find the probability of a word by dividing the number of occurences\n",
+    "# in a given sense by the total words in the sense overall\n",
+    "# print(words_dict[\"THINK\"][\"I\"]/sum_dict[\"THINK\"])\n",
+    "\n",
+    "for word in test_features:\n",
+    "    \n",
+    "    # calcuate both probabilities to three decimal points\n",
+    "\n",
+    "    exp_prob = \"{:.3%}\".format(words_dict[\"EXP\"][word]/sum_dict[\"EXP\"])\n",
+    "\n",
+    "    think_prob = \"{:.3%}\".format(words_dict[\"THINK\"][word]/sum_dict[\"THINK\"])\n",
+    "\n",
+    "    # print each word and it's probability of occuring in each sense\n",
+    "\n",
+    "    print(f\"{word}: \\n Experience Probability {exp_prob}\\n Think Probability: {think_prob}\")"
    ]
   },
   {
@@ -468,11 +544,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# space for your code here"
+    "\n",
+    "prob_dict = {\"EXP\": {word: 0 for word in test_features}, \"THINK\": {word: 0 for word in test_features}}\n",
+    "\n",
+    "for key, values in prob_dict.items():\n",
+    "    for val in values:\n",
+    "        prob_dict[key][val] = words_dict[key][val]/sum_dict[key]\n",
+    "\n",
+    "final_dict = {\"EXP\": 1, \"THINK\": 1}\n",
+    "\n",
+    "for key, value in prob_dict.items():\n",
+    "    for ky, val in value.items():\n",
+    "        final_dict[key] = final_dict[key] * val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EXP': 1.6562149154395024e-21, 'THINK': 2.869221564563354e-23}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_dict"
    ]
   }
  ],
